<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social</string>
    <string name="add_post">Add post</string>
    <string name="send_button">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friend_discovery">FriendDiscoveryActivity</string>
    <string name="title_activity_incoming_friendship">IncomingFriendshipActivity</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
	<string name ="acceptFriendship">Accept Friendship</string>
	<string name="server_connect">Connect to server</string>
	<string name="connection_failed">Error while connecting to the server</string>
	<string name="connection_screen_info">Welcome to Social.\n\nThis application provides a way to share your thoughts and impressions with other users.\n\nMessages are encrypted and authenticated to ensure your privacy.</string>
	<string name="home_wall_button">My Wall</string>
	<string name="home_add_friend_button">Add Friend</string>
	<string name="home_post_button">Show Friends</string>
	<string name="home_show_friends_button">View friends</string>
	<string name="add_NFCfriend">Add friend via NFC</string>
	<string name="no_friends">No friends found in friendlist</string>
	<string name="registration_title">Registration</string>
	<string name="register_button">Register</string>
	<string name="cancel_button">Cancel</string>
	
</resources>
