<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/connection_screen_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/connection_screen_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection_screen_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/server_connect" />
    
        <Button
        android:id="@+id/NFCfriendButton"
        android:onClick="OnNFC_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
  		android:layout_below="@+id/connection_screen_info"
  		android:layout_marginTop="128dp"
        android:text="@string/add_NFCfriend" />
    

</RelativeLayout>